xostat-lambda-api/rust/services/hello_world/target/x86_64-unknown-linux-musl/debug/build/crossbeam-utils-9757e8fa73e52865/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/84c898d65adf2f39a5a98507f1fe0ce10a2b8dbc/library/core/src/sync/atomic.rs:2933:1
 ::: /rustc/84c898d65adf2f39a5a98507f1fe0ce10a2b8dbc/library/core/src/sync/atomic.rs:2951:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
